# signal_synth

./: .gitignore  CLINICAL_ECG_SPECIFICATION.md  CMakeLists.txt  DATA_LICENSES.md  ECG_SCENARIO_SPECIFICATION.md  LEGAL_PROVENANCE.md  MANIFEST.in  MODEL_SPECIFICATION.md  PPG_MODEL_SPECIFICATION.md  PRODUCT_DIRECTION.md  PROVENANCE_BUNDLE.md  README.md  README_full.md  RELEASE_NOTES.md  SCENARIO_AUTHORING.md  WAY_OF_WORKING.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  verification.yml
apps/signal_synth_cli/: main.cpp
cmake/: signal_synth-config.cmake.in
doc/: PYTHON_DISTRIBUTION.md  R_PEAK_EVIDENCE_PACKS.md
doc/synsigra_architecture_docs/: 00_INDEX.md  01_SRS.md  02_DOCUMENTATION_PLAN.md  03_SYSTEM_ARCHITECTURE.md  04_REPOSITORY_STRUCTURE.md  05_CORE_LIBRARY_ARCHITECTURE.md  06_ALGORITHM_DESIGN.md  07_SCENARIO_AND_DATA_MODEL.md  08_API_DESIGN.md  09_SAAS_ARCHITECTURE.md  10_EXPORT_AND_REPORTING.md  11_VERIFICATION_AND_VALIDATION_PLAN.md  12_SECURITY_PRIVACY_AND_LICENSE.md  13_HARDWARE_ROADMAP.md  14_MDR_READINESS_AND_QUALITY.md  15_IMPLEMENTATION_ROADMAP.md  16_REPO_REVIEW.md  17_TRACEABILITY_SOP.md  18_TRACEABILITY_MATRIX.md  README.md
examples/catalog/: curated_pack_metadata_v1.json  verification_packs_v1.json
examples/databrowser/: 067_ECG_PPG_GroundTruth.txt  068_ECG_Hypertrophy_Phenotypes.txt  069_ECG_Infarction_Phenotypes.txt  070_ECG_Injury_Phenotypes.txt  071_ECG_STT_Phenotypes.txt  072_ECG_Ischemia_Phenotypes.txt  073_ECG_Advanced_Conduction_Phenotypes.txt  074_ECG_Episode_Rhythm_Phenotypes.txt  075_ECG_Artifact_Signal_Quality.txt  076_ECG_Scenario_Pack_Batch_QA.txt  077_ECG_Morphology_Population.txt  078_ECG_Dynamic_Repolarization.txt  079_PPG_Multichannel_Optical.txt  080_ECG_Delineation_GroundTruth.txt  081_Wearable_Multirate_Timebase.txt  082_PPG_Optical_Physiology_V2.txt  083_Wearable_Device_Site_Profiles.txt  084_Cardiorespiratory_PRV_Respiration.txt  085_ECG_Advanced_Rhythm_Burden.txt  086_ECG_Extended_Morphology.txt  087_ECG_Hybrid_External_Noise.txt  088_ECG_HRV_Robustness_V2.txt  089_ECG_RPeak_RR_Noise.txt  090_ECG_QTc_Verification.txt
examples/detections/: ecg_clean_beat_classes_perfect.csv  ecg_clean_rpeaks_perfect.csv
examples/hrv/: hrv_mild_reference_output.json
examples/packs/: advanced_rhythm_burden_v1.json  cardiorespiratory_v1.json  combined_worst_case_v1.json  ecg_beat_classification_v1.json  ecg_delineation_v1.json  ecg_delineation_v2.json  ecg_dynamic_repolarization_v1.json  ecg_extended_morphology_v1.json  ecg_hybrid_noise_v1.json  ecg_morphology_population_v1.json  ecg_morphology_stress_v1.json  ecg_qtc_verification_v1.json  ecg_qtc_verification_v1_expectations.json  ecg_rhythm_v1.json  hrv_robustness_v2.json  hrv_robustness_v2_expectations.json  hrv_v1.json  hrv_v1_expectations.json  ppg_alignment_v1.json  ppg_benchmark_v1.json  ppg_optical_v2.json  r_peak_noise_frontier_v1.json  r_peak_rr_noise_v1.json  r_peak_rr_noise_v1_expectations.json  r_peak_rr_simple_stress_v1.json  r_peak_rr_snr_ladder_v1.json  r_peak_stress_v1.json  signal_quality_v1.json  wearable_stress_v1.json  wearable_timebase_v2.json
examples/python/: score_challenge.py
examples/scenarios/: ecg_artifact_signal_quality.json  ecg_clean.json  ecg_ppg_clean.json  ppg_arrhythmia_pulse_loss_v4.json  ppg_dropout_saturation_v4.json  ppg_motion_accelerometer_v4.json  ppg_multichannel_optical_v4.json  ppg_multichannel_optical_v6.json  ppg_perfusion_drop_v4.json  ppg_perfusion_stress_v4.json  ppg_physiology_v2.json  ppg_respiratory_modulation_v4.json  ppg_variable_ptt_v4.json  ppg_weak_missing_v4.json
integrations/databrowser/: README.md  (+4 more)
python/: README.md  setup.py
scripts/: audit_curated_truth.py  build_python_distribution.sh  export_curated_pack_metadata.py  generate_project_noise_fixture.py  generate_r_peak_noise_frontier.py  generate_simple_r_peak_packs.py  prepare_external_noise_assets.py  refresh_curated_release.sh  smoke_python_distribution.sh
src/: SignalProc_BasicD.cpp  cardiorespiratory.cpp  cardiorespiratory.h  challenge_assembly.cpp  challenge_assembly.h  challenge_package.cpp  challenge_package.h  clinical_ecg.cpp  clinical_ecg.h  delineation_io.cpp  delineation_io.h  delineation_scoring.cpp  delineation_scoring.h  detection_io.cpp  detection_io.h  ecg_beat_classification.cpp  ecg_beat_classification.h  ecg_compare.cpp  ecg_compare.h  ecg_edf_bdf_export.cpp  ecg_edf_bdf_export.h  ecg_export.cpp  ecg_export.h  ecg_model.cpp  ecg_model.h  ecg_morphology.cpp  ecg_morphology.h  ecg_pack.cpp  ecg_pack.h  ecg_pack_score.cpp  ecg_pack_score.h  ecg_render.cpp  ecg_render.h  ecg_scenario.cpp  ecg_scenario.h  ecg_scenario_json.cpp  ecg_scenario_json.h  ecg_wfdb_export.cpp  ecg_wfdb_export.h  external_noise.cpp  (+33 more)
teszt/: CMakeLists.txt  README.md  authoring_cli_test.py  cardiorespiratory_python_test.py  cardiorespiratory_test.cpp  challenge_package_test.cpp  challenge_python_security_test.py  cli_test.cmake  clinical_ecg_test.cpp  databrowser_generation_test.cpp  delineation_io_test.cpp  delineation_python_test.py  delineation_scoring_test.cpp  detection_io_test.cpp  ecg_beat_classification_test.cpp  ecg_compare_test.cpp  ecg_conduction_test.cpp  ecg_edf_bdf_export_test.cpp  ecg_episode_test.cpp  ecg_export_test.cpp  ecg_extended_morphology_test.cpp  ecg_infarction_test.cpp  ecg_model_test.cpp  ecg_morphology_quality_test.cpp  ecg_morphology_test.cpp  ecg_pack_score_test.cpp  ecg_pack_test.cpp  ecg_repolarization_test.cpp  ecg_scenario_json_test.cpp  ecg_scenario_test.cpp  ecg_wfdb_export_test.cpp  edf_bdf_native_conformance.py  external_noise_test.cpp  golden_challenge_fixture_test.py  hrv_metrics_test.cpp  hrv_pack_test.cpp  hrv_scoring_test.cpp  integration_contract_test.py  interval_io_test.cpp  interval_scoring_test.cpp  (+27 more)
teszt/package_smoke/: CMakeLists.txt  main.cpp  run.cmake
teszt/templates/: pulse_legacy_profile.txt  script_ecg_500.txt  script_modulated_ecg_045.txt  script_modulated_sine_036.txt  script_noise_045.txt  triangle_legacy_profile.txt
tools/: check_databrowser_sync.sh  update_databrowser_sync_manifest.sh
(+155 files in other folders)
