[metadata]
name = synsigra
version = 0.14.0
description = Local synthetic biosignal challenge loading and verification SDK
long_description = file: python/README.md
long_description_content_type = text/markdown
author = Synsigra
license = Proprietary engineering QA tooling
url = https://github.com/tamask1s/signal_synth
project_urls =
    Source = https://github.com/tamask1s/signal_synth
    Issues = https://github.com/tamask1s/signal_synth/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
package_dir =
    = python
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where = python

[options.package_data]
synsigra = py.typed

[options.entry_points]
console_scripts =
    synsigra-verify = synsigra.cli:main
